syntax = "proto3";
import "common.proto";
package messenger;

option go_package = "satweave/sat-node/task-manager";

service TaskManagerService {
  // Deploy a task to the task manager.
  rpc DeployTask(DeployTaskRequest) returns (NilResponse) {}
  rpc StartTask(StartTaskRequest) returns (NilResponse) {}
}

message ExecuteTask {
  string cls_name = 1;
  repeated string input_endpoints = 2;
  repeated string output_endpoints = 3;
  repeated File resources = 4;
  File task_file = 5;
  string subtask_name = 6;
  int64 partition_idx = 7;
  string locate = 8;
}

// logical Task
message Task {
  string cls_name = 1;
  int64 currency = 2;
  repeated string input_tasks = 3;
  repeated File resources = 4;
  File task_file = 5;
  string locate = 6;
  int64 slot_id = 7;
}

message File {
  string name = 1;
  string content = 2;
}

message DeployTaskRequest {
  ExecuteTask exec_task = 1;
}

message StartTaskRequest {

}